# panda-force

./: .gitignore  .gitmodules  CMakeLists.txt  EDC Knife EE Config.ipynb  Knife EE Config.ipynb  Plot Forces.ipynb  README.md  Vertical Cutting Velocity.ipynb  edc-knife-endeffector-config.json  gripper-endeffector-config.json  knife-endeffector-config.json  log.json  log_null.json  log_panda_mass0g_pose2.json  log_panda_mass500g_pose2.json  log_panda_mass500g_pose3.json  log_panda_nop.json  log_panda_scale0g.json  slicing-knife-endeffector-config.json  zmq_control.py
assets/panda_robot/: panda_arm_dflex.urdf  panda_arm_edc.urdf  panda_arm_edc_meshes_only.urdf  panda_arm_knife_only.urdf  panda_arm_slicing.urdf  panda_arm_slicing_meshes_only.urdf
assets/panda_robot/meshes/visual/: cutting_board.dae  cutting_board.mtl  slicing_knife_fixture.msh  slicing_knife_fixture_collision.mtl
assets/panda_robot/xacro/meshes/visual/: cutting_board.blend  cutting_board.blend1  cutting_board.dae  cutting_board.mtl  edc_knife_fixture.mtl  slicing_knife_fixture.mtl
experiments/: cartesian_velocity_control.cpp  cut_vertical.cpp  cut_vertical_edc.cpp  echo_robot_state.cpp  example_cutting.py  force_control.cpp  settings.h  spline.hpp  state_recorder.hpp  utils.hpp  vertical_cutting.hpp  zmq_control_client.py  zmq_control_server.cpp
logs/: log_panda_cartesian_velocity_0g.json  log_panda_cartesian_velocity_500g.json  log_panda_cut_vertical_edc.json  log_panda_cut_vertical_edc_nop.json  log_panda_cut_vertical_edc_potato.json  log_panda_force_control_0.2kg.json  log_panda_force_control_0.3kg.json  log_panda_mass0g.json  log_panda_mass0g_pose3.json  log_panda_mass500g.json  log_panda_scale300g.json  log_panda_scale430g.json
logs/cutting/cucumber/: log_panda_cut_vertical_cucumber.json  log_panda_cut_vertical_nothing.json
logs/cutting/edc/apple1/: log_panda_cut_vertical_edc_apple1.json  log_panda_cut_vertical_edc_apple1_cut2.json  log_panda_cut_vertical_edc_nop.json
logs/cutting/edc/cucumber/: log_panda_cut_vertical_edc_cucumber.json  log_panda_cut_vertical_edc_cucumber_cut2.json  log_panda_cut_vertical_edc_nop1.json  log_panda_cut_vertical_edc_nop2.json  log_panda_cut_vertical_edc_nop3.json
logs/cutting/edc/potato_stumpf/: log_panda_cut_vertical_edc_potato_after_multiple_cuts.json  log_panda_cut_vertical_edc_potato_not_quite_through.json  log_panda_cut_vertical_edc_potato_not_quite_through2.json
logs/cutting/large/cucumber/: log_panda_cut_vertical_large_cucumber_cut1.json  log_panda_cut_vertical_large_cucumber_nop.json
